# FinRag

./: Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.chroma/: chroma.sqlite3
data/: chunk_debug.json  eval.json  relations.json
scipts/: Untitled.ipynb
src/rag_starterkit/: main.py
src/rag_starterkit/api/: debug_routes.py  routes.py  schemas.py
src/rag_starterkit/data/: ingest.py  pdf_loader.py
src/rag_starterkit/eval/: evaluate_pipeline.py
src/rag_starterkit/ingest/: bank_router.py  faq_chunker.py  ingest_pipeline.py  milvus_drop_collections.py  milvus_healthcheck.py  milvus_smoke_test.py  relations_builder.py
src/rag_starterkit/llm/: device.py  ollama_client.py  qwen_judge.py  safety.py
src/rag_starterkit/rag/: backend_factory.py  bm25_index.py  chunking.py  embeddings.py  generator.py  milvus_backend.py  prompt.py  retriever.py  router_retriever.py  test_bm25.py  vector_backend.py  vectorstore.py
