[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-enterprise-starterkit"
version = "0.1.0"
description = "Enterprise-grade RAG starterkit with FastAPI, citations, and evaluation harness."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0",
  "sentence-transformers>=2.7.0",
  "chromadb>=0.5.0",
  "pymupdf>=1.24.0",
  "requests>=2.31.0",
  "transformers>=4.41.0",
  "torch>=2.1.0",
]

[project.optional-dependencies]
# For local development and testing
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0"
]

# For enterprise-scale vector backend
milvus = [
  "pymilvus>=2.4.0"
]

# For hybrid retrieval (dense + BM25)
hybrid = [
  "rank-bm25>=0.2.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
